0.6.3 (2013-11-01)
* open vhds read/only where possible

0.6.2 (2013-10-31)
* support for opening disks > 4GiB on 32-bit hosts

0.6.1 (2013-10-25)
* sparse_dd: set the vhd parent search path to include the directory
  of the vhd, not the current directory of the sparse_dd process

0.6.0 (2013-08-02)
* sparse_dd: use O_DIRECT by default
* sparse_dd: allow encryption to be enabled and disabled via config file
* sparse_dd: experimental options to bypass tapdisk for reads and writes
* vhd-tool CLI prototype
