@@ -1,3 +1,7 @@
+trunk (unreleased)
+* vhd-tool serve: support receiving data as raw (no chunked or NBD)
+* vhd-tool serve: use BLKGETSIZE64 to get the size of the destination block device
+
 0.6.3 (2013-11-01)
 * open vhds read/only where possible
 
